// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with hidden options 1`] = `
<div
  className="multiselect"
>
  <div
    className="selectBox"
    onClick={[Function]}
  >
    <select>
      <option>
        Games
      </option>
    </select>
    <div
      className="overSelect"
    >
      <div
        className="caret"
      />
    </div>
  </div>
  <div
    className="checkboxes"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <input
      onChange={[Function]}
      placeholder="Search for games."
      type="text"
    />
    <label>
      <input
        onClick={[Function]}
        type="checkbox"
        value="CandyEat"
      />
      CandyEat
    </label>
    <label>
      <input
        onClick={[Function]}
        type="checkbox"
        value="OnionsPick"
      />
      OnionsPick
    </label>
    <label>
      <input
        onClick={[Function]}
        type="checkbox"
        value="FannyDuck"
      />
      FannyDuck
    </label>
    <label>
      <input
        onClick={[Function]}
        type="checkbox"
        value="Click-o-Wisp"
      />
      Click-o-Wisp
    </label>
  </div>
</div>
`;

exports[`should match snapshot with visible options 1`] = `
<div
  className="multiselect"
>
  <div
    className="selectBox"
    onClick={[Function]}
  >
    <select>
      <option>
        Games
      </option>
    </select>
    <div
      className="overSelect"
    >
      <div
        className="caret"
      />
    </div>
  </div>
  <div
    className="checkboxes"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <input
      onChange={[Function]}
      placeholder="Search for games."
      type="text"
    />
    <label>
      <input
        onClick={[Function]}
        type="checkbox"
        value="CandyEat"
      />
      CandyEat
    </label>
    <label>
      <input
        onClick={[Function]}
        type="checkbox"
        value="OnionsPick"
      />
      OnionsPick
    </label>
    <label>
      <input
        onClick={[Function]}
        type="checkbox"
        value="FannyDuck"
      />
      FannyDuck
    </label>
    <label>
      <input
        onClick={[Function]}
        type="checkbox"
        value="Click-o-Wisp"
      />
      Click-o-Wisp
    </label>
  </div>
</div>
`;
